Pushing new swagger info.
